--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -16,6 +16,15 @@ body {
     font-size: 2rem;
 }
 
+#question {
+    margin-top: 50px;
+    font-size: 24px;
+}
+
+#buttons {
+    margin-top: 20px;
+}
+
 input, button {
     font-size: 2rem;
     padding: 1rem;
